# rag-agent-chatbot

./: CICD.md  OPENSOURCE.md  README.md  architecture.md  azure-pipelines-auth.yaml  azure-pipelines-backend.yaml  azure-pipelines-embedding.yaml  azure-pipelines-frontend.yaml  azure-pipelines-gateway.yaml  azure-pipelines-mirror.yaml  azure-pipelines-models.yaml  azure-pipelines-signra.yaml  azure-pipelines.yaml  catalog-info.yaml
assets/: .gitignore  README.md
assets/auth/: auth.py  db.py  logger.py  main.py  models.py  pyproject.toml
assets/backend/: Dockerfile  README.md  agent.py  auth.py  client.py  config.py  logger.py  main.py  models.py  postgres_storage.py  prompts.py  pyproject.toml  utils.py  vector_store.py
assets/embedding/: Dockerfile  server.py
assets/frontend/: .env  Dockerfile  README.md  eslint.config.mjs  index.html  nginx.conf  (+8 more)
assets/signra/: Dockerfile  README.md  auth.py  logger.py  main.py  models.py  pyproject.toml
docs/: CNCF_PROJECTS.md  MILVUS_CODE_FIX.md  MILVUS_SETUP.md  POSTGRESQL_SETUP.md  architecture.md  auth-admin-setup.md  auth-jwt-setup.md  authenticator-setup.md  backend-development.md  cicd.md  cncf-projects.md  device-architecture.md  frontend-development.md  google-auth-setup.md  gpu-sharing-and-kserve.md  kubernetes-deployment.md  llm-selection-journey.md  milvus-code-fix.md  milvus-setup.md  model-inference-vllm.md  nemotron-70b-vs-49b.md  opensource.md  postgresql-setup.md  rag-grounding-constraints.md  spark-chat-overview.md  tool-calling-and-chat-template.md  websocket-state-management-k8s.md
kustomize/: README.md
(+152 files in other folders)
